# WorkshopAI2

PathVisualizer/: LICENSE.md  README.md  pyproject.toml
PathVisualizer/visualiser/: algorithms.py  colors.py  grid.py  main.py  node.py  utils.py
tsp_osm_demo/: README.md  app.py  map_view.py  optimizer.py  requirements.txt  routing.py
